ingress.yaml

kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: argocd-server
  namespace: argocd
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80

### NOTE
# To use this ingress, you need to allow argocd-server
# to run in an insecure mode. Add `--insecure` arg
# to the container:
# ```yaml
# ...
#      containers:
#       - args:
#         - /usr/local/bin/argocd-server
#         - --insecure
# ...
# ```
